--- a/.github/workflows/build-wheels-release-rocm62.yml
+++ b/.github/workflows/build-wheels-release-rocm62.yml
@@ -1,4 +1,4 @@
-name: Build Wheels & Release
+name: Build Wheels & Release ROCm62
 
 on:
   workflow_dispatch:
@@ -56,7 +56,7 @@ jobs:
 
       # Setup Python
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v3
         with:
@@ -195,13 +195,13 @@ jobs:
 
       # Upload files
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: matrix.artname == 'wheel'
         with:
           name: 'wheel'
           path: ./dist/*
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: matrix.artname == 'sdist'
         with:
           name: 'sdist'
