--- a/.github/workflows/build-wheels-release_torch27_only.yml
+++ b/.github/workflows/build-wheels-release_torch27_only.yml
@@ -164,6 +164,12 @@ jobs:
             Write-Output "PACKAGE_VERSION=None" >> "$env:GITHUB_OUTPUT"
           }
 
+      # Pin VS build tools to 17.9 for wider compat
+
+      - name: Install VS2022 BuildTools 17.9.7
+        run: choco install -y visualstudio2022buildtools --version=117.9.7.0 --params "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --installChannelUri https://aka.ms/vs/17/release/180911598_-255012421/channel"
+        if: runner.os == 'Windows'
+
       # Install uv for easier python setup
       - name: Install the latest version of uv and set the python version
         uses: astral-sh/setup-uv@v5
@@ -267,6 +273,13 @@ jobs:
       - name: Build for CUDA
         if: matrix.cuda != ''
         run: |
+          # --- Spawn the VS shell
+          if ($IsWindows) {
+            Import-Module 'C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\Common7\Tools\Microsoft.VisualStudio.DevShell.dll'
+            Enter-VsDevShell -VsInstallPath 'C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools' -DevCmdArguments '-arch=x64 -host_arch=x64'
+            $env:DISTUTILS_USE_SDK=1
+          }
+
           # --- Build wheel
           $BUILDTAG = "+cu${{ steps.cuda_deps.outputs.CUDA_VERSION_PYTORCH }}-torch${{ matrix.torch }}"
           $env:BUILD_TARGET = "cuda"
